[package]
name = "izar-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"] }
bincode = "1"
ethers = "2.0"
rand = "0.8"
metrics-exporter-prometheus = "0.12"
serde_json = "1.0"
base64 = "0.21"
tracing = "0.1"
serde_repr = "0.1"

[dependencies.snarkvm-utilities]
version = "=0.16.19"

[dependencies.snarkvm-ledger]
version = "=0.16.19"

[dependencies.snarkvm-console]
version = "=0.16.19"

[dependencies.aleo-rust]
workspace = true

[dependencies.rocksdb]
workspace = true

[dev-dependencies.rusty-hook]
workspace = true

