[package]
name = "izar-relayer"
version.workspace = true
edition.workspace = true

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ethers = "2.0"
clap = { version = "4", features = ["derive"] }
toml = "0.7"
axum = { version = "0.7", features = ["macros"] }
metrics = "0.22"
backon = "0.4"
ureq = { version = "2.6", features = ["json"] }
rayon = "1.7"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1.77"

[dependencies.aleo-rust]
workspace = true

[dev-dependencies.rusty-hook]
workspace = true

[dev-dependencies.serde_json]
version = "1"

[dev-dependencies.rand]
version = "0.8"

[dev-dependencies.bincode]
version = "1.3"

[dependencies.tower-http]
version = "0.5"
features = ["cors", "trace"]

[dependencies.izar-core]
path = "../core"
